edit for weeraya

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
-    <title>To nongbamby</title>
+    <title>To Weeraya</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Courier+Prime&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -17,7 +17,7 @@
     <div id="security-layer">
         <div class="lock-icon">🔒</div>
         <input type="text" id="pass-input" maxlength="4" placeholder="****" autocomplete="off">
-        <div class="hint" id="hint-msg">Hint: Test รหัสคือทะเบียนรถเค้า</div>
+        <div class="hint" id="hint-msg">Hint: Test รหัสคือสิ่งที่เชื่อมถึงกันของเรา</div>
     </div>
 
     <div id="canvas-container"></div>
